--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20080320-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Romain Francoise <rfrancoise@debian.org>  Thu, 20 Mar 2008 19:18:34 +0100
+
 emacs-snapshot (1:20080315-1) unstable; urgency=low
 
   * New snapshot.
