--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20080328-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Romain Francoise <rfrancoise@debian.org>  Fri, 28 Mar 2008 17:48:17 +0100
+
 emacs-snapshot (1:20080327-1) unstable; urgency=low
 
   * New snapshot.
