--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20080406-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Romain Francoise <rfrancoise@debian.org>  Sun, 06 Apr 2008 13:05:29 +0200
+
 emacs-snapshot (1:20080328-1) unstable; urgency=low
 
   * New snapshot.
