--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20080406-2) unstable; urgency=low
+
+  * debian/patches/tmp-fixes.diff: Revert changes that break functionp.
+
+ -- Romain Francoise <rfrancoise@debian.org>  Mon, 07 Apr 2008 19:32:07 +0200
+
 emacs-snapshot (1:20080406-1) unstable; urgency=low
 
   * New snapshot.
