--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20080510-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Romain Francoise <rfrancoise@debian.org>  Sat, 10 May 2008 16:40:33 +0200
+
 emacs-snapshot (1:20080430-1) unstable; urgency=low
 
   [ Romain Francoise ]
