--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20111128-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Julien Danjou <acid@debian.org>  Mon, 28 Nov 2011 11:09:15 +0100
+
 emacs-snapshot (1:20111121-1) unstable; urgency=low
 
   * New snapshot.
