--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20111205-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Julien Danjou <acid@debian.org>  Mon, 05 Dec 2011 09:38:59 +0100
+
 emacs-snapshot (1:20111128-1) unstable; urgency=low
 
   * New snapshot.
