--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+emacs-snapshot (1:20111206-1) unstable; urgency=low
+
+  * New snapshot.
+  * Fix org-ditaa-jar-path with a new patch.
+
+ -- Julien Danjou <acid@debian.org>  Tue, 06 Dec 2011 09:53:12 +0100
+
 emacs-snapshot (1:20111205-1) unstable; urgency=low
 
   * New snapshot.
