--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20111213-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Tue, 13 Dec 2011 11:40:54 +0100
+
 emacs-snapshot (1:20111206-1) unstable; urgency=low
 
   * New snapshot.
