--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20111219-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Julien Danjou <acid@debian.org>  Mon, 19 Dec 2011 09:49:43 +0100
+
 emacs-snapshot (1:20111213-1) unstable; urgency=low
 
   * New snapshot
