--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20111226-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Julien Danjou <acid@debian.org>  Mon, 26 Dec 2011 14:47:10 +0100
+
 emacs-snapshot (1:20111219-1) unstable; urgency=low
 
   * New snapshot.
