--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20111227-1) unstable; urgency=low
+
+  * New snapshot.
+
+ -- Julien Danjou <acid@debian.org>  Tue, 27 Dec 2011 11:26:15 +0100
+
 emacs-snapshot (1:20111226-1) unstable; urgency=low
 
   * New snapshot.
