--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20120105-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Thu, 05 Jan 2012 10:00:35 +0100
+
 emacs-snapshot (1:20111227-1) unstable; urgency=low
 
   * New snapshot.
