--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (1:20121126-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Thu, 26 Jan 2012 09:55:05 +0100
+
 emacs-snapshot (1:20120119-1) unstable; urgency=low
 
   * New snapshot
