--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120201-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Wed, 01 Feb 2012 09:34:49 +0100
+
 emacs-snapshot (2:20120126-1) unstable; urgency=low
 
   * New snapshot
