--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120208-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Wed, 08 Feb 2012 10:00:34 +0100
+
 emacs-snapshot (2:20120201-1) unstable; urgency=low
 
   * New snapshot
