--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120305-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Mon, 05 Mar 2012 10:12:53 +0100
+
 emacs-snapshot (2:20120222-1) unstable; urgency=low
 
   * New snapshot
