--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120319-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Mon, 19 Mar 2012 13:42:30 +0100
+
 emacs-snapshot (2:20120312-1) unstable; urgency=low
 
   * New snapshot
