--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120326-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Mon, 26 Mar 2012 11:44:56 +0200
+
 emacs-snapshot (2:20120319-1) unstable; urgency=low
 
   * New snapshot
