--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120403-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Tue, 03 Apr 2012 09:45:41 +0200
+
 emacs-snapshot (2:20120326-1) unstable; urgency=low
 
   * New snapshot
