--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120417-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Tue, 17 Apr 2012 10:00:20 +0200
+
 emacs-snapshot (2:20120410-1) unstable; urgency=low
 
   * New snapshot
