--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120423-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Mon, 23 Apr 2012 11:41:34 +0200
+
 emacs-snapshot (2:20120417-1) unstable; urgency=low
 
   * New snapshot
