--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120502-1) unstable; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Wed, 02 May 2012 09:28:12 +0200
+
 emacs-snapshot (2:20120423-1) unstable; urgency=low
 
   * New snapshot
