--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+emacs-snapshot (2:20120510-1) UNRELEASED; urgency=low
+
+  * New snapshot
+
+ -- Julien Danjou <acid@debian.org>  Thu, 10 May 2012 09:45:19 +0200
+
 emacs-snapshot (2:20120502-1) unstable; urgency=low
 
   * New snapshot
