--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-emacs-snapshot (2:20120510-1) UNRELEASED; urgency=low
+emacs-snapshot (2:20120510-1) unstable; urgency=low
 
   * New snapshot
   * Update README.source
